# REsQue-api

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  pytest.ini  wsgi.py
config/: dev.yaml  test.yaml
docs/sphinx/source/: conf.py  index.rst
resque_api/application/auth/: authenticate.py
resque_api/application/ports/: security.py  uow.py
resque_api/domain/base/: aggregate.py  entity.py  exceptions.py  value_object.py
resque_api/domain/common/: exceptions.py  value_objects.py
resque_api/domain/project/: entities.py  exceptions.py  value_objects.py
resque_api/domain/requirement/: entities.py  exceptions.py  value_objects.py
resque_api/domain/user/: entities.py  exceptions.py  value_objects.py
resque_api/infrastructure/security/: password_hasher.py
src/application/auth/: authenticate.py
src/application/commands/: command.py
src/application/events/: event.py
src/application/ports/: message_bus.py  security.py  uow.py
src/application/validation/: exceptions.py  validation_context.py
src/bootstrap/: app.py  bootstrap.py  config.py
src/domain/: domain_exception.py  entity.py
src/domain/member/: exceptions.py  user.py  values.py
src/domain/project/: entities.py  exceptions.py  project.py  project_member.py  value_objects.py  values.py
src/domain/shared/: aggregate_root.py  domain_exception.py  entity.py
src/domain/user/: entities.py  exceptions.py  user.py  value_objects.py  values.py
src/infrastructure/: container.py
src/infrastructure/flask/: extensions.py  utils.py
src/infrastructure/id/: uuid_generator.py
src/infrastructure/message_bus/: config.py
src/infrastructure/persistence/: database_factory.py  database_factory_factory.py
src/infrastructure/security/: jwt_token_generator.py  password_hasher.py  security_factory.py
src/infrastructure/uuid/: uuid_generator.py
src/interfaces/api/: __init__.py  auth_routes.py
tests/: conftest.py
tests/integration/: conftest.py
tests/unit/: conftest.py  test_app.py
utils/: build_docs.py
(+98 files in other folders)
