[tool.poetry]
name = "resque-api"
version = "0.1.0"
description = ""
authors = ["zeyakim-dev <chlwltjrdev@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "3.11.9"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
python-dotenv = "^1.0.1"
pytest = "^8.3.3"
marshmallow = "^3.23.1"
uuid = "^1.30"
pytest-mock = "^3.14.0"
sqlalchemy = "^2.0.36"
pytest-cov = "^6.0.0"
freezegun = "^1.5.1"
bcrypt = "^4.2.1"
pyjwt = {extras = ["crypto"], version = "^2.10.1"}
pika = "^1.3.2"
docker = "^7.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
test = "pytest:main"

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
python_files = ["test_*.py"]