[tool.poetry]
name = "resque-api"
version = "0.1.0"
description = ""
authors = ["zeyakim-dev <chlwltjrdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"


[tool.poetry.group.dev.dependencies]
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
