[tool.poetry]
name = "resque-api"
version = "0.1.0"
description = ""
authors = ["zeyakim-dev <chlwltjrdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.9"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.0.5"
flask-jwt-extended = "^4.6.0"
flask-cors = "^4.0.0"
pydantic = "^2.6.1"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-mermaid = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
